ggplot 0.5.7
----------------------------------------

  * fix bug in scatterplot matrix where all scatterplots were transposed!
  * only output bars with > 0 count from stat_bar
  * change default bar border to same colour as fill
  * tweaks to improve display of scatterplot matrix
  * new order aesthetic (currently only for lines/paths) that allows you to control the drawing order
  * fixed bug that prevented you from overriding the default axis expansion
  * make statistics more robust to errors
  * geom_jitter now works correctly with groups and categorical values (was actually a bug in how scale_discrete deals with continuous values)
  * fix bug in geom_abline where slope was ignored
  * stat_smooth returns silently if <2 non-missing data points
  * layers with set parameters will not use mapped aesthetics
  * qplot should now work better within functions
  * added quickplot as an alias of qplot, to avoid confusion with qunif, etc
  * use LazyLoad: false instead of SaveData: true for better future compatability
  * adding data and aesthetics in separate steps should now work
  * scale_identity no longer converts everything to character
  * better error message if you add a scale without a matching aesthetic mapping in the plot

ggplot 0.5.6
----------------------------------------

Improved error messages and other notifications:
  * all geoms and position adjustments should now give an informative error message when required aesthetics are missing
  * better error messages if data not a data frame, or mapping not created by aes or aes_string
  * better errors for qplot when variables missing or data invalid
  * better error if somehow you are missing necessary scales
  * stat_bin informs you of the default choice of binwidth
  * stat_smooth gives helpful error messages for common problems
  * printing a geom now displays the data set that it uses (if not the default)

Other improvements:
  * colour and fill legends now surround by background plot colour