@@ -4,16 +4,15 @@ GeomPath <- proto(Geom, {
   draw <- function(., data, scales, coordinates, ...) {
     if (nrow(data) < 2) return()
     
-    if (!is.null(data$order)) {
-      data <- data[order(data$order), ]
-    }
+    if (is.null(data$order)) data$order <- data$group
+    data <- data[order(data$order), ]
+
     munched <- coordinates$munch(data)
 
     n <- nrow(munched)
     group_diff <- munched$group[-1] != munched$group[-n]
     start <- c(TRUE, group_diff)
     end <-   c(group_diff, TRUE)
-
     
     with(munched, 
       segmentsGrob(x[!end], y[!end], x[!start], y[!start], default.units="native",
